--- a/ansible/qr_codes.yaml
+++ b/ansible/qr_codes.yaml
@@ -35,7 +35,13 @@
       debug:
         msg: "{{ item }}"
       loop: "{{ qr_list_aux2 }}"
- 
+
+
+    - name: create vars.yml 
+      template:
+        src: vars.yaml.j2
+        dest: vars1.yaml
+
     - name: generate qr codes images
       command: "qrencode -o ./qr_codes/{{ item.0.grafana_code }}-{{ item.1 }}.png 'https://firma.rentabasicauniversal.es/' -m 2 -s 6"
       loop: "{{ qr_list_aux2|subelements('qr_codes') }}"
