--- a/ansible/common-resources/themes/crossvale-theme.yml
+++ b/ansible/common-resources/themes/crossvale-theme.yml
@@ -30,7 +30,7 @@ font:
 page:
   background_color:           ffffff
   layout:                     portrait
-  margin:                     [1.0in, 0.67in, 1.5in, 0.67in]
+  margin:                     [1.5in, 0.67in, 1.5in, 0.67in]
   size:                       A4
 #some additional variables
 confidentiality:
@@ -52,11 +52,11 @@ base:
   #line_height_length:        18
   #font_size:                 11.2
   #line_height_length:        16
-  font_size:                  9
+  font_size:                  45
   ##font_size:                10.5
   #line_height_length:        15
   # correct line height for Noto Serif metrics
-  line_height_length:         12
+  line_height_length:         45
   #font_size:                 11.25
   #line_height_length:        18
   line_height:                $base_line_height_length / $base_font_size
@@ -181,8 +181,8 @@ example:
   background_color:           transparent
   # FIXME reenable margin bottom once margin collapsing is implemented
   padding:                    [$vertical_rhythm, $horizontal_rhythm, 0, $horizontal_rhythm]
-image:
-  align:                      left
+#image:
+#  align:                      left
 prose:
   margin_top:                 0
   margin_bottom:              $vertical_rhythm
