--- a/ansible/main.yaml
+++ b/ansible/main.yaml
@@ -1,9 +1,10 @@
 - hosts: localhost
   connection: local
   gather_facts: no
-  vars_files: final_list.yaml
+  vars_files:
+    - final_list.yaml
+    - vault_vars.yaml
 
   roles:
     - qr_generator
     - grafana_provisioner
-
