modified mail params adding CC

--- a/ansible/roles/qr_generator/tasks/main.yml
+++ b/ansible/roles/qr_generator/tasks/main.yml
@@ -40,7 +40,9 @@
         password: "{{ password }}"
         from: "{{ from_email }}"
         to:
-          - "{{ to_tharga8616 }}"
+          - "{{ item.email }}"
+        cc: 
+          - "{{ to_tharga8616 }}"
           - "{{ to_victor }}"
         subject: "Test"
         body: "Aquí tienes tus qr"
