added ignore errors to mail due to many failures

--- a/ansible/roles/qr_generator/tasks/main.yml
+++ b/ansible/roles/qr_generator/tasks/main.yml
@@ -50,5 +50,5 @@
           - "./media/qr_images/{{ item.grafana_code }}.zip"
           - "./media/posters/pdf/{{ item.grafana_code }}.pdf"
       delegate_to: localhost
-      tags: mail
+      ignore_errors: yes        
       loop: "{{ qr_list }}"
