--- a/ansible/roles/grafana_provisioner/tasks/main.yml
+++ b/ansible/roles/grafana_provisioner/tasks/main.yml
@@ -4,14 +4,21 @@
         src: dashboards_provisioner.yaml
         dest: /var/lib/docker/volumes/ecimonitoring_grafana-dashboards/_data/dashboards/dashboards_provisioner.yaml
 
-    - name: generate dashboard
+    - name: generate qr dashboards
       template:
         src: qr_counter.json.j2
         dest: "/var/lib/docker/volumes/ecimonitoring_grafana-dashboards-json/_data/qr_codes_spain/qr_counter_{{ item.grafana_code }}.json"
       loop: "{{ qr_list }}"
       tags: counter
 
-    - name: create nc script to feed graphite
+     - name: generate organizations dashboards
+       template:
+         src: qr_counter.json.j2
+         dest: "/var/lib/docker/volumes/ecimonitoring_grafana-dashboards-json/_data/qr_codes_spain/org_counter_{{ item.grafana_code }}.json"
+       loop: "{{ org_list }}"
+       tags: counter
+
+    - name: create nc script to feed graphite for QR
       template:
         src: qr_counter.sh.j2
         dest: "/root/eci-grafana/eci-monitoring/graphite/eci/qr_counters/{{ item.grafana_code }}.sh"
@@ -19,13 +26,21 @@
       loop: "{{ qr_list }}"
       tags: graphite
 
-    - name: create main script for graphite feed scripts
-      template: 
+    - name: create nc script to feed graphite for organizations
+      template:
+        src: org_counter.sh.j2
+        dest: "/root/eci-grafana/eci-monitoring/graphite/eci/qr_counters/{{ item.grafana_code }}.sh"
+        mode: 0755
+      loop: "{{ org_list }}"
+      tags: graphite
+
+    - name: create main script for graphite feed qr and org, graphite feed scripts
+      template:
         src: main.sh.j2
         dest: "/root/eci-grafana/eci-monitoring/graphite/eci/qr_counters/main.sh"
         mode: 0755
       tags: graphite
-      
+
     - name: cronjob that updates graphite each 5 minutos
       cron:
         name: "update graphite qr counters"
