--- a/ansible/roles/qr_generator/tasks/main.yml
+++ b/ansible/roles/qr_generator/tasks/main.yml
@@ -46,7 +46,7 @@
           - "{{ item.email }}"
         cc:
           - "{{ to_tharga8616 }}"
-          - "{{ to_victor }}"
+         # - "{{ to_victor }}"
         subject: "🔥 Ya tienes aquí los QR solicitados 🔳"
         body: |
           ¡Comenzamos! Ya tienes aquí los QR solicitados.
@@ -60,6 +60,8 @@
           Aquí tienes tu panel personal asociado a los QR adjuntos en este email.
           https://grafana.unconditionalbasicincome.eu/d/{{ item.grafana_code }}/{{ item.grafana_code }}?orgId=1
 
+          Por favor, escanea uno de los códigos, accede al link para comprobar que funciona y en 15 minutos debería aumentar el contador del panen del grafana. 
+          
           Recuerda que deberás imprimir los carteles y colocarlos antes del domingo 29 de noviembre por las calles de nuestra ciudades. Si puedes colocarlo en algún comercio, mejor.
 
           Por último hacer notar que en esta campaña contamos con más de 500 QR que pondremos por toda España. La campaña durará hasta el 15 de diciembre y entonces realizaremos una valoración y conteo de las firmas que hayamos podido conseguir mediante esta acción colectiva.
